# NDTwin-Kernel

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  OpenflowCapacity.json  OpenflowFlowEntryExamplesMininet.md  README.md  StaticNetworkTopologyMininet_10Switches.json  StaticNetworkTopology_ipAlias4_10Switches.json  StaticNetworkTopology_ipAlias4_10Switches_all_1g_cable.json  StaticNetworkTopology_ipAlias4_10_HPE_Switches_all_1g_cable.json  StaticNetworkTopology_ipAlias4_9Switches_all_1g_cable.json  ndt_api.md  ndtwin-header.txt  third_party_api.md
doc/: OpenflowFlowEntryOperationExamples.md  ndt_api.md
include/common_types/: AppTypes.hpp  GraphTypes.hpp  SFlowType.hpp
include/event_system/: EventBus.hpp  EventPayloads.hpp  PayloadTypes.hpp  RequestParser.hpp
include/ndt_core/application_management/: ApplicationManager.hpp  SimulationRequestManager.hpp
include/ndt_core/collection/: Classifier.hpp  FlowLinkUsageCollector.hpp  TopologyAndFlowMonitor.hpp
include/ndt_core/data_management/: HistoricalDataManager.hpp
include/ndt_core/event_handling/: ControllerAndOtherEventHandler.hpp
include/ndt_core/http/: FlowRuleTypes.hpp  HttpSession.hpp
include/ndt_core/intent_translator/: IntentTranslator.hpp  LLMAgent.hpp  LLMResponseTypes.hpp
include/ndt_core/intent_translator/old/: LLMAgent.hpp  LLMResponseTypes.hpp
include/ndt_core/lock_management/: LockManager.hpp
include/ndt_core/power_management/: DeviceConfigurationAndPowerManager.hpp
include/ndt_core/routing_management/: Controller.hpp  FlowDispatcher.hpp  FlowJob.hpp  FlowRoutingManager.hpp
include/utils/: Logger.hpp  SSHHelper.hpp  Utils.hpp
libs/spdlog/: async.h  async_logger-inl.h  async_logger.h  common-inl.h  common.h  logger-inl.h  logger.h  mdc.h  pattern_formatter-inl.h  pattern_formatter.h  spdlog-inl.h  spdlog.h  stopwatch.h
libs/spdlog/cfg/: argv.h  env.h  helpers-inl.h  helpers.h
libs/spdlog/details/: backtracer-inl.h  circular_q.h  console_globals.h  file_helper-inl.h  file_helper.h  fmt_helper.h  log_msg-inl.h  log_msg.h  log_msg_buffer-inl.h  mpmc_blocking_q.h  null_mutex.h  os-inl.h  os.h  periodic_worker.h  registry-inl.h  registry.h  synchronous_factory.h  tcp_client-windows.h  tcp_client.h  thread_pool-inl.h  thread_pool.h  udp_client-windows.h  udp_client.h
libs/spdlog/fmt/: bin_to_hex.h  fmt.h
libs/spdlog/fmt/bundled/: args.h  base.h  chrono.h  color.h  compile.h  format-inl.h  format.h  os.h  ostream.h  printf.h  ranges.h  std.h  xchar.h
libs/spdlog/sinks/: android_sink.h  ansicolor_sink-inl.h  ansicolor_sink.h  base_sink-inl.h  base_sink.h  basic_file_sink-inl.h  basic_file_sink.h  callback_sink.h  daily_file_sink.h  dist_sink.h  dup_filter_sink.h  hourly_file_sink.h  kafka_sink.h  mongo_sink.h  msvc_sink.h  null_sink.h  ostream_sink.h  qt_sinks.h  ringbuffer_sink.h  rotating_file_sink-inl.h  rotating_file_sink.h  sink-inl.h  sink.h  stdout_color_sinks-inl.h  stdout_color_sinks.h  stdout_sinks-inl.h  stdout_sinks.h  syslog_sink.h  systemd_sink.h  tcp_sink.h  udp_sink.h  win_eventlog_sink.h  wincolor_sink-inl.h  wincolor_sink.h
setting/: AppConfig.hpp  AppConfig.hpp.example  StaticNetworkTopologyMininet_10Switches.json  StaticNetworkTopology_ipAlias4_10_HPE_Switches_smapled_by_p4.json
src/: main.cpp
src/event_system/: CMakeLists.txt  EventBus.cpp
src/ndt_core/application_management/: ApplicationManager.cpp  CMakeLists.txt  SimulationRequestManager.cpp
src/ndt_core/collection/: CMakeLists.txt  Classifier.cpp  FlowLinkUsageCollector.cpp  TopologyAndFlowMonitor.cpp
src/ndt_core/data_management/: CMakeLists.txt  HistoricalDataManager.cpp
src/ndt_core/event_handling/: CMakeLists.txt  ControllerAndOtherEventHandler.cpp
src/ndt_core/http/: CMakeLists.txt  HttpSession.cpp
src/ndt_core/intent_translator/: IntentTranslator.cpp  LLMAgent.cpp  answer_agent_prompt.txt
src/ndt_core/intent_translator/old/: CMakeLists.txt  IntentTranslator copy.cpp  IntentTranslator.cpp  LLMAgent.cpp  answer_agent_prompt.txt  validation_agent_prompt.txt
src/ndt_core/power_management/: CMakeLists.txt  DeviceConfigurationAndPowerManager.cpp
src/ndt_core/routing_management/: CMakeLists.txt  Controller.cpp  FlowDispatcher.cpp  FlowRoutingManager.cpp
src/utils/: CMakeLists.txt  Logger.cpp
